--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li class="menu-item has-sub-menu">
-                    <a class="menu-link" href="#0">servicios
+                    <a class="menu-link" href="disciplinas.html">Disciplinas
                         <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
@@ -92,68 +92,69 @@
 
     <main>
         <div class="portada">
-            <img src="img/contacto.jpg" alt="imagen1" class="porta">
+            <img src="img/contacto.jpg" alt="imagen1" class="img-cover">
         </div>
 
         <section class="form-gral">
-        <section class="form-contacto">
-            <h2>Contactate con nosotros</h2>
-            <form action="" target="_blank"></form>
-            <span class="form-consulta">                
-                <div>
-                    <label class="form-ingreso" for="firstname">Nombre: </label> <br> 
-                    <input class="controles" type="text" name="firstname" placeholder="Ingrese su nombre..."> 
-                </div>
-            </span>
-            <span class="form-consulta">
-                <div>
-                    <label class="form-ingreso" for="lastname">Apellido:</label> <br>
-                    <input class="controles" type="text" name="lastname" placeholder="Ingrese su apellido...">
-                </div>
-            </span>
-            <span class="form-consulta">
-                <div>
-                    <label class="form-ingreso" for="email">Email:</label> <br>
-                    <input class="controles" type="text" name="email" placeholder="Ingrese su correo electronico..."> 
-                </div>
-            </span>
-            <span class="form-consulta">
-                <div>
-                    <label class="form-ingreso" for="phone">Teléfono:</label> <br>
-                    <input class="controles" type="text" name="phone" placeholder="Ingrese su número telefónico..."> 
-                </div>
-            </span>
-            <span class="form-consulta" >
-                <div>
-                    <label class="form-ingreso" for="consulta">Consulta:</label> <br>
-                    <input class="controles" id="box" type="text" name="consulta">
-                </div>
-            </span>
-            <br>
-            <span class="form-consulta">
-                <input class="form-button" type="submit" value="Enviar">
-            </span>
-        </section>
-        
-        <section class="form-information">
-            <span class="form-help">
-                <img class="imagenchida" src="img/contacto.png" alt="">
-            </span>
-            <span class="form-help">
-                <p class="info-contacto">
-                    Teléfonos <br>
-                    +54 9 2956984563 / 456-9845
-                    <br><br>
-                    e-mail <br>
-                    info@sanusvita.com
-                    <br><br>
-                    Gimnasio central <br>
-                    PONER DIRECCIÓN DE UNA CALLE
+            <section class="form-contacto">
+                <h2>Contactate con nosotros</h2>
+                <form action="" target="_blank"></form>
+                <span class="form-consulta">
+                    <div>
+                        <label class="form-ingreso" for="firstname">Nombre: </label> <br>
+                        <input class="controles" type="text" name="firstname" placeholder="Ingrese su nombre...">
+                    </div>
+                </span>
+                <span class="form-consulta">
+                    <div>
+                        <label class="form-ingreso" for="lastname">Apellido:</label> <br>
+                        <input class="controles" type="text" name="lastname" placeholder="Ingrese su apellido...">
+                    </div>
+                </span>
+                <span class="form-consulta">
+                    <div>
+                        <label class="form-ingreso" for="email">Email:</label> <br>
+                        <input class="controles" type="text" name="email"
+                            placeholder="Ingrese su correo electronico...">
+                    </div>
+                </span>
+                <span class="form-consulta">
+                    <div>
+                        <label class="form-ingreso" for="phone">Teléfono:</label> <br>
+                        <input class="controles" type="text" name="phone" placeholder="Ingrese su número telefónico...">
+                    </div>
+                </span>
+                <span class="form-consulta">
+                    <div>
+                        <label class="form-ingreso" for="consulta">Consulta:</label> <br>
+                        <input class="controles" id="box" type="text" name="consulta">
+                    </div>
+                </span>
+                <br>
+                <span class="form-consulta">
+                    <input class="form-button" type="submit" value="Enviar">
+                </span>
+            </section>
 
-                </p>
-            </span>
+            <section class="form-information">
+                <span class="form-help">
+                    <img class="imagenchida" src="img/contacto.png" alt="">
+                </span>
+                <span class="form-help">
+                    <p class="info-contacto">
+                        Teléfonos <br>
+                        +54 9 2956984563 / 456-9845
+                        <br><br>
+                        e-mail <br>
+                        info@sanusvita.com
+                        <br><br>
+                        Gimnasio central <br>
+                        PONER DIRECCIÓN DE UNA CALLE
+
+                    </p>
+                </span>
+            </section>
         </section>
-    </section>
     </main>
 </body>
 
