--- a/disciplinas.html
+++ b/disciplinas.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li class="menu-item has-sub-menu">
-                    <a class="menu-link" href="disciplinas.html">Disciplinas
+                    <a class="menu-link" href="#0">Disciplinas
                         <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
@@ -91,12 +91,73 @@
     </header>
 
     <main>
+        <br><br><br><br>
         <div class="portada">
-            <img src="img/gimnasio.jpg" alt="imagen1" class="img-cover">
+            <!-- <img src="img/gimnasio.jpg" alt="imagen1" class="img-cover"> -->
         </div>
 
         <section>
-
+            <h1>Beneficios del ejercicio físico</h1>
+            <p>
+                Ya sea cardio o pesas, nuestro organismo lo agradecerá a corto y largo plazo. Nuestros objetivos
+                pueden ser cambiar esteticamente, mejorar nuestra calidad vida, u otros motivos. Sin embargo aquí te
+                dejamos algunos beneficios de un entrenamiento físico:
+            </p>
+            <ul>
+                <li>
+                    <h3>Es una solución efectiva para calmar la ansiedad y reducir el estrés.</h3>
+                </li>
+                <li>
+                    <h3>Mejora tu calidad de sueño.</h3>
+                </li>
+                <li>
+                    <h3>Ayuda a mejorar tu figura.</h3>
+                </li>
+                <li>
+                    <h3>Ayuda al fortalecimiento de huesos y músculos.</h3>
+                </li>
+                <li>
+                    <h3>Ayuda a formar mayor fuerza de voluntad.</h3>
+                </li>
+                <li>
+                    <h3>Reduce el riesgo de sufrir lesiones.</h3>
+                </li>
+                <li>
+                    <h3>Entrenar con tus compañero de gimnasio es divertido. (?</h3>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <div>
+                <h2 class="act-titulo">Si te interesa saber más sobre nuestras rutinas para cada actividad, a
+                    continuación nuestras disciplinas... </h2>
+            </div>
+            <div class="actividades">
+                <article class="actividad">
+                    <a href="gimnasio.html">
+                        <img src="img/gimnasio.png" alt="" class="img-actividad">
+                        <h3 class="disciplina">Gimnasio</h3>
+                    </a>
+                </article>
+                <article class="actividad">
+                    <a href="funcional.html">
+                        <img src="img/funcional.png" alt="" class="img-actividad">
+                        <h3 class="disciplina">Funcional</h3>
+                    </a>
+                </article>
+                <article class="actividad">
+                    <a href="calistenia.html">
+                        <img src="img/calistenia.png" alt="" class="img-actividad">
+                        <h3 class="disciplina">Calistenia</h3>
+                    </a>
+                </article>
+                <article class="actividad">
+                    <a href="powerlifting.html">
+                        <img src="img/powerlifting.png" alt="" class="img-actividad">
+                        <h3 class="disciplina">Powerlifting</h3>
+                    </a>
+                </article>
+            </div>
         </section>
     </main>
 </body>
