--- a/nosotros.html
+++ b/nosotros.html
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li class="menu-item has-sub-menu">
-                    <a class="menu-link" href="#0">servicios
+                    <a class="menu-link" href="disciplinas.html">Disciplinas
                         <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
@@ -92,17 +92,19 @@
     </header>
     <main>
         <div class="portada">
-            <img src="img/familygym.jpg" alt="imagen1" class="porta">
+            <img src="img/familygym.jpg" alt="imagen1" class="img-cover">
         </div>
         <section class="about">
             <div class="about-gral">
                 <h2>¿Quiénes Somos?</h2>
                 <span>
                     <p>
-                    Somos una empresa con 15 años de trayectoria, que ha sabido sobrellevar diferentes adversidades,
-                    buscando siempre un bienestar para el usuario, que este pueda amar la actividad física e incorporar
-                    hábitos saludables para su vida cotidiana. Es al día de hoy que estamos orgullosos de haber llegado
-                    hasta aquí.
+                        Somos una empresa con 15 años de trayectoria, que ha sabido sobrellevar diferentes adversidades,
+                        buscando siempre un bienestar para el usuario, que este pueda amar la actividad física e
+                        incorporar
+                        hábitos saludables para su vida cotidiana. Es al día de hoy que estamos orgullosos de haber
+                        llegado
+                        hasta aquí.
                     </p>
                 </span>
             </div>
