--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="dark-theme">
     <header class="page-header header-basic is-sticky" id="page-header">
         <div class="container">
-            <!-- <a href="/" class=""> <img src="img/logoLight.png" alt="" class=""></a> -->
+            <!-- <a href="/" class=""> <img src="img/sanusvita.png" alt="" class=""></a> -->
             <!-- <nav class="menu-navbar"> -->
             <ul class="list-js links-list">
                 <li class="menu-item">
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li class="menu-item has-sub-menu">
-                    <a class="menu-link" href="#0">servicios
+                    <a class="menu-link" href="disciplinas.html">Disciplinas
                         <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
@@ -92,7 +92,7 @@
 
     <main>
         <div class="portada">
-            <img src="img/gym1.jpg" alt="imagen1" class="porta">
+            <img src="img/gym1.jpg" alt="imagen1" class="img-cover">
         </div>
 
         <section class="presentacion">
@@ -103,44 +103,50 @@
                     Nos caracterizamos por nuestra labor cotidiana que es: dedicarse a la capacitación continua, poder
                     lograr un buen trabajo en equipo, y ser aceptos diariamente por nuestra comunidad.
                     <br>
-                    Queremos enseñar nuestro valores, tal como estilo de vida saludable, promoviendo el ejercicio físico,
+                    Queremos enseñar nuestro valores, tal como estilo de vida saludable, promoviendo el ejercicio
+                    físico,
                     buena alimentación, una vida de disciplina, compromiso constante y en cada ámbito poder demostrar
                     nuestro profesionalismo.
                     <br>
                     Nuestro personal se compone de Profesionales en Salud, Nutrición, Enfermería, Psicología,
                     Instructores en educación física.
                 </p>
-            </div>            
+            </div>
         </section>
 
-        <section class="actividades">
-            <article class="actividad">
-                <a href="gimnasio.html">
-                    <h3 class="disciplina">Gimnasio</h3>
-                    <img src="img/gimnasio.png" alt="" class="fotoact">
-                </a>    
-            </article>
-            <article class="actividad">
-                <a href="funcional.html">
-                    <h3 class="disciplina">Funcional</h3>
-                    <img src="img/funcional.png" alt="" class="fotoact">
-                </a>    
-            </article>          
-            <article class="actividad">
-                <a href="calistenia.html">
-                    <h3 class="disciplina">Calistenia</h3>
-                    <img src="img/calistenia.png" alt="" class="fotoact">
-                </a>    
-            </article>
-            <article class="actividad">
-                <a href="powerlifting.html">
-                    <h3 class="disciplina">Powerlifting</h3>
-                    <img src="img/powerlifting.png" alt="" class="fotoact">
-                </a>    
-            </article>
+        <section class="disciplinas">
+            <div>
+                <h2 class="act-titulo">Nuestras disciplinas</h2>
+            </div>
+            <div class="actividades">
+                <article class="actividad">
+                    <a href="gimnasio.html">
+                        <img src="img/gimnasio.png" alt="" class="img-actividad">
+                        <h3 class="disciplina">Gimnasio</h3>
+                    </a>
+                </article>
+                <article class="actividad">
+                    <a href="funcional.html">
+                        <img src="img/funcional.png" alt="" class="img-actividad">
+                        <h3 class="disciplina">Funcional</h3>
+                    </a>
+                </article>
+                <article class="actividad">
+                    <a href="calistenia.html">
+                        <img src="img/calistenia.png" alt="" class="img-actividad">
+                        <h3 class="disciplina">Calistenia</h3>
+                    </a>
+                </article>
+                <article class="actividad">
+                    <a href="powerlifting.html">
+                        <img src="img/powerlifting.png" alt="" class="img-actividad">
+                        <h3 class="disciplina">Powerlifting</h3>
+                    </a>
+                </article>
+            </div>
         </section>
 
-        
+
     </main>
 
     <!-- <footer class="top">
