--- a/powerlifting.html
+++ b/powerlifting.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,6 +18,7 @@
     <script defer src="js/Navbar.js"></script>
     <script defer src="js/header.js"></script>
 </head>
+
 <body class="dark-theme">
     <header class="page-header header-basic is-sticky" id="page-header">
         <div class="container">
@@ -28,7 +30,7 @@
                     </a>
                 </li>
                 <li class="menu-item has-sub-menu">
-                    <a class="menu-link" href="#0">servicios
+                    <a class="menu-link" href="disciplinas.html">Disciplinas
                         <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
@@ -86,11 +88,12 @@
             </nav>
         </div>
     </header>
-    
+
     <main>
         <div class="portada">
-            <img src="img/powerlifting.jpg" alt="imagen1" class="porta">
+            <img src="img/powerlifting.jpg" alt="imagen1" class="img-cover">
         </div>
     </main>
 </body>
+
 </html>
