--- a/disciplinas.html
+++ b/disciplinas.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li class="menu-item has-sub-menu">
-                    <a class="menu-link" href="#0">Disciplinas
+                    <a class="menu-link" href="disciplinas.html">Disciplinas
                         <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
