--- a/gimnasio.html
+++ b/gimnasio.html
@@ -96,7 +96,14 @@
         </div>
 
         <section>
+            <h1>Nuestras rutinas para musculutura:</h1>
 
+            <div>
+                <a href="espalda.html">
+                    <h2>Espalda</h2>
+                    <img src="img/espalda.jpg" alt="">
+                </a>
+            </div>
         </section>
     </main>
 </body>
