Agregue fotaca y algo en gimnasio

--- a/gimnasio.html
+++ b/gimnasio.html
@@ -92,6 +92,18 @@
         <div class="portada">
             <img src="img/gimnasio.jpg" alt="imagen1" class="porta">
         </div>
+
+        <section>
+            <h1>Rutinas de hipertrofia - Volumen:</h1>
+            <div>
+            <a href="#"><h2>Espaldovich</h2><img src="img/espalda.jpg" alt=""></a>       
+            </div>
+
+
+        </section>
+
+
+
     </main>
 </body>
 </html>
