Modificaciones gimnasio + pecho

--- a/gimnasio.html
+++ b/gimnasio.html
@@ -95,10 +95,27 @@
             <img src="img/gimnasio.jpg" alt="imagen1" class="img-cover">
         </div>
 
-        <section>
-            <h1>Rutinas de hipertrofia - Volumen:</h1>
+        <section class="disciplinas">
             <div>
-            <a href="espalda.html"><h2>Espaldovich</h2><img src="img/espalda.jpg" alt=""></a>       
+                <h1>Rutina de hipertrofia - Volumen:</h1>
+            </div>
+            <div class="actividades">
+                <article class="actividad">
+                    <a href="espalda.html">
+                        <h2 class="disciplina" class="disciplina">Espaldovich</h2><img src="img/espalda.jpg" alt=""
+                            class="img-ejercicio">
+                    </a>
+                </article>
+                <article class="actividad">
+                    <a href="#">
+                        <h2 class="disciplina" class="disciplina">Pechardo</h2><img src="img/press-de-banco-plano.jpg" alt=""
+                            class="img-ejercicio">
+                    </a>
+                </article>
+
+
+
+
             </div>
 
 
