--- a/index.html
+++ b/index.html
@@ -21,72 +21,83 @@
 </head>
 
 <body class="dark-theme">
-    <header class="page-header header-basic is-sticky" id="page-header">
-        <div class="container">
-            <!-- <a href="/" class=""> <img src="img/sanusvita.png" alt="" class=""></a> -->
-            <!-- <nav class="menu-navbar"> -->
-            <ul class="list-js links-list">
-                <li class="menu-item">
-                    <a class="menu-link" href="#">inicio
-                    </a>
-                </li>
-                <li class="menu-item has-sub-menu">
-                    <a class="menu-link" href="disciplinas.html">Disciplinas
-                        <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
-                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                            stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
-                            <line x1="12" y1="5" x2="12" y2="19"></line>
-                            <line x1="5" y1="12" x2="19" y2="12"></line>
-                        </svg>
-                    </a>
-
-                    <ul class="sub-menu">
-                        <li class="menu-item sub-menu-item">
-                            <a class="menu-item sub-menu-link" href="gimnasio.html">Gimnasio</a>
-                        </li>
-                        <li class="menu-item sub-menu-item">
-                            <a class="menu-item sub-menu-link" href="funcional.html">Funcional</a>
-                        </li>
-                        <li class="menu-item sub-menu-item">
-                            <a class="menu-item sub-menu-link" href="calistenia.html">Calistenia</a>
-                        </li>
-                        <li class="menu-item sub-menu-item">
-                            <a class="menu-item sub-menu-link" href="powerlifting.html">PowerLifting</a>
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="menu-item">
-                    <a class="menu-link" href="nosotros.html">Nosotros
-                    </a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="contacto.html">Contacto
-                        <i class="fas fa-plus plus-icon"></i>
-                    </a>
-                </li>
-            </ul>
-            <!-- <div class="controls-box">
-                            <div class="links menu-wrapper ">
-                                
-            
-                            </div>
-                            <div class="control menu-toggler">
-                                <span class="line1"></span>
-                                <span class="line2"></span>
-                                <span class="line3"></span>            
-                            </div>
-                            <div class="mode-switcher">
-                                <div class="switch-inner go-light" tittle="Switch to Light Mode">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-sun"><circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line></svg>
-                                </div>
-                                <div class="switch-inner go-dark" tittle="Switch to Dark Mode">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-moon"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
-                                </div>
-                            </div>
-                        </div>     -->
-
+    <header class="" id="page-header">
+        <div class="h-container">
+            <div class="logo">
+                <a href="/" class=""> <img src="img/sanusvita.png" alt="logo" class=""></a>
+            </div>
+            <nav class="nav-menu">
+                <ul class="menu">
+                    <li class="menu-item">
+                        <a class="menu-link" href="#">Inicio
+                        </a>
+                    </li>
+                    <li class="menu-item has-sub-menu">
+                        <a class="menu-link" href="disciplinas.html">Disciplinas
+                            <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
+                                <line x1="12" y1="5" x2="12" y2="19"></line>
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                            </svg>
+                        </a>
+                        <ul class="sub-menu">
+                            <li class="menu-item sub-menu-item">
+                                <a class="menu-link sub-menu-link" href="gimnasio.html">Gimnasio</a>
+                            </li>
+                            <li class="menu-item sub-menu-item">
+                                <a class="menu-link sub-menu-link" href="funcional.html">Funcional</a>
+                            </li>
+                            <li class="menu-item sub-menu-item">
+                                <a class="menu-link sub-menu-link" href="calistenia.html">Calistenia</a>
+                            </li>
+                            <li class="menu-item sub-menu-item">
+                                <a class="menu-link sub-menu-link" href="powerlifting.html">PowerLifting</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="nosotros.html">Nosotros
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="contacto.html">Contacto
+                            <i class="fas fa-plus plus-icon"></i>
+                        </a>
+                    </li>
+                </ul>
             </nav>
+            <div class="mode-switcher">
+                <div class="switch-inner go-light" tittle="Switch to Light Mode">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="feather feather-sun">
+                        <circle cx="12" cy="12" r="5"></circle>
+                        <line x1="12" y1="1" x2="12" y2="3"></line>
+                        <line x1="12" y1="21" x2="12" y2="23"></line>
+                        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                        <line x1="1" y1="12" x2="3" y2="12"></line>
+                        <line x1="21" y1="12" x2="23" y2="12"></line>
+                        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                    </svg>
+                </div>
+                <div class="switch-inner go-dark" tittle="Switch to Dark Mode">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="feather feather-moon">
+                        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="controls-box">
+                <div class="control menu-toggler">
+                    <span class="line1"></span>
+                    <span class="line2"></span>
+                    <span class="line3"></span>
+                </div>
+            </div>
         </div>
     </header>
 
