--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="css/lightDark.css">
     <title>Sanus Vita</title>
     <script defer src="js/darkMode.js"></script>
-    <!-- <script defer src="js/Navbar.js"></script> -->
     <script defer src="js/header.js"></script>
 </head>
 
@@ -164,55 +163,89 @@
 
     </main>
 
-    <!-- <footer class="top">
-        <div class="row">
-            <img src="img/logoLight.png" alt="logo" class="col3" >
-        <div class="links col3">
-            <div class="col3">
-                <h2>Platform</h2>
-                <a href="">Directus Core</a>
-                <br>
-                <a href="">Open Data Platforrm</a>
-                <br>
-                <a href="">Feature list</a>
-                <br>
-                <a href="">Road Map</a>
-                <br>
-                <a href="">Marketplace</a>
-            </div>            
+    <footer>
+        <div class="divider">
+            <div class="logo"></div>
         </div>
-        <div class="links col3">
-            <div>
-                <h2>Cloud</h2>
-                <a href="">Dashboard</a>
-                <br>
-                <a href="">Register</a>
-                <br>
-                <a href="">Pricing</a>
-                <br>
-                <a href="">System status</a>
-                <br>
-                <a href="">Partner Program</a>
-                <br>
+        <ul class="f-section d-list">
+            <li><p>Nuestras disciplinas</p></li>
+            <li><a href="gimnasio.html" class="f-link">Gimnasio</a></li>
+            <li><a href="funcional.html" class="f-link">Funcional</a></li>
+            <li><a href="calistenia.html" class="f-link">Calistenia</a></li>
+            <li><a href="powerlifting.html" class="f-link">PowerLifting</a></li>
+        </ul>
+        <ul class="f-section adopt-list">
+            <li><p>Entrena con nosotros!</p></li>
+            <li><a href="nosotros.html" class="f-link">Sobre nosotros</a></li>
+            <li><a href="contacto.html" class="f-link">Contacto</a></li>
+        </ul>
+        <div class="subscription">
+            <div class="well-cta--form">
+                <div class="well-cta--text">
+                    <h3>Suscribite a nuestras noticias</h3>
+                    <p>Mantente al tanto de las novedades de Sanus Vita. Puedes desuscribirte en cualquier momento.</p>
+                </div>
+                <div class="well-cta--input">
+                    <input type="text" class="input-form input-lg" placeholder="Ingresa tu email aquí">
+                </div>
+                <div class="well-cta--cta">
+                    <a href="" class="button secondary"><strong>Subscribirse</strong></a>
+                </div>
             </div>
-        </div>  
-        </div>      
+        </div>
+        <ul class="f-section social-media">
+            <li><p>Seguinos:</p></li>
+            <li><a href="">
+                    <svg class="icon-social-facebook" xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-brand-facebook" viewBox="0 0 24 24"
+                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
+                    </svg>
+                </a>
+            </li>
+            <li><a href=""><svg class="icon-social-instagram" xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-brand-instagram" viewBox="0 0 24 24"
+                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z"></path>
+                        <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
+                        <path d="M16.5 7.5l0 .01"></path>
+                    </svg></a></li>
+            <li>
+                <a href="">
+                    <svg class="icon-social-twitter" xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-brand-twitter" viewBox="0 0 24 24"
+                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path
+                            d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c0 -.249 1.51 -2.772 1.818 -4.013z">
+                        </path>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <svg class="icon-social-youtube" xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-brand-youtube" viewBox="0 0 24 24"
+                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M3 5m0 4a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v6a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z"></path>
+                        <path d="M10 9l5 3l-5 3z"></path>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+        <div class="legal-stuff">
+            <span>Copyright © 2007</span>
+            <a href="">Terms of Use</a>
+            <a href="">Privacy Policy</a>
+        </div>
     </footer>
-    <footer class="bottom">
-        <div class="legal">
-            <span>© 2023 All rights reserved</span>
-            <a href="">License</a>
-            <a href="">Terms</a>
-            <a href="">Privacy</a>
-        </div>
-        <div class="links">
-            <a href="/img/github.svg" class="fa-brands fa-github"></a>
-            <a href="" class="fa-brands fa-linkedin"></a>
-            <a href="" class="fa-brands fa-docker"></a>
-        </div>
-    </footer> 
-    <script src="js/Navbar.js"></script>
-    <script src="main.js"></script> -->
 </body>
 
 </html>
