--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <header class="" id="page-header">
         <div class="h-container">
             <div class="logo">
-                <a href="/" class="light-logo"> <img src="img/LOGO1.png" alt="logo" class=""></a>
-                <a href="/" class="dark-logo"> <img src="img/LOGO2.png" alt="logo" class=""></a>
+                <a href="index.html" class="light-logo"> <img src="img/LOGO1.png" alt="logo" class=""></a>
+                <a href="index.html" class="dark-logo"> <img src="img/LOGO2.png" alt="logo" class=""></a>
             </div>
             <nav class="nav-menu">
                 <ul class="menu" id="menu">
