--- a/disciplinas.html
+++ b/disciplinas.html
@@ -52,9 +52,6 @@
                             <li class="menu-item sub-menu-item">
                                 <a class="menu-link sub-menu-link" href="calistenia.html">Calistenia</a>
                             </li>
-                            <li class="menu-item sub-menu-item">
-                                <a class="menu-link sub-menu-link" href="powerlifting.html">PowerLifting</a>
-                            </li>
                         </ul>
                     </li>
 
@@ -164,12 +161,6 @@
                         <h3 class="disciplina">Calistenia</h3>
                     </a>
                 </article>
-                <article class="actividad">
-                    <a href="powerlifting.html">
-                        <img src="img/powerlifting.png" alt="" class="img-actividad">
-                        <h3 class="disciplina">Powerlifting</h3>
-                    </a>
-                </article>
             </div>
         </section>
     </main>
@@ -180,10 +171,9 @@
         </div>
         <ul class="f-section d-list">
             <li><p>Nuestras disciplinas</p></li>
-            <li><a href="" class="f-link">Gimnasio</a></li>
-            <li><a href="" class="f-link">Funcional</a></li>
-            <li><a href="" class="f-link">Calistenia</a></li>
-            <li><a href="" class="f-link">PowerLifting</a></li>
+            <li><a href="gimnasio.html" class="f-link">Gimnasio</a></li>
+            <li><a href="funcional.html" class="f-link">Funcional</a></li>
+            <li><a href="calistenia.html" class="f-link">Calistenia</a></li>
         </ul>
         <ul class="f-section adopt-list">
             <li><p>Entrena con nosotros!</p></li>
