--- a/gimnasio.html
+++ b/gimnasio.html
@@ -52,9 +52,6 @@
                             <li class="menu-item sub-menu-item">
                                 <a class="menu-link sub-menu-link" href="calistenia.html">Calistenia</a>
                             </li>
-                            <li class="menu-item sub-menu-item">
-                                <a class="menu-link sub-menu-link" href="powerlifting.html">PowerLifting</a>
-                            </li>
                         </ul>
                     </li>
 
@@ -159,8 +156,7 @@
 
     </main>
 
-    <!-- Probando vue -->
-    <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
+    <!-- Vue -->
     <script src="js/vue.js"></script>
     <script src="js/gymruti.js"></script>
 
@@ -173,7 +169,6 @@
             <li><a href="gimnasio.html" class="f-link">Gimnasio</a></li>
             <li><a href="funcional.html" class="f-link">Funcional</a></li>
             <li><a href="calistenia.html" class="f-link">Calistenia</a></li>
-            <li><a href="powerlifting.html" class="f-link">PowerLifting</a></li>
         </ul>
         <ul class="f-section adopt-list">
             <li><p>Entrena con nosotros!</p></li>
